k8s/applications/services/flight-tracking/tar1090/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tar1090
  namespace: flight-tracking
spec:
  selector:
    matchLabels:
      app: tar1090
  replicas: 0 # Not currently working, segfaults at readsb/api.c#1713 :(
  template:
    metadata:
      labels:
        app: tar1090
    spec:
      containers:
        - name: tar1090
          image: ghcr.io/sdr-enthusiasts/docker-tar1090:latest
          ports:
          - containerPort: 80
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "750Mi"
              cpu: "500m"
          livenessProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            periodSeconds: 60
            failureThreshold: 3
            timeoutSeconds: 30
          startupProbe:
            exec:
              command:
                - /scripts/healthcheck.sh
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 30
          volumeMounts:
            - name: run
              mountPath: /run
            - name: varlog
              mountPath: /var/log
      volumes:
        - name: run
          emptyDir:
            medium: "Memory"
            sizeLimit: 64M
        - name: varlog
          emptyDir: {}
