k8s/applications/services/flight-tracking/tar1090/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tar1090
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: tar1090
